# beancount-importer-sjtu-ecard

./: .gitignore  README.md  beancount_importer_sjtu_ecard.py  default.nix  pyproject.toml
.github/workflows/: test.yml
tests/: sjtu-meal-card.html  test_importer.py
