[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beancount-importer-sjtu-ecard"
version = "0.0.1"
description = ''
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Bojun Ren", email = "bj.ren.coding@outlook.com" },
]
dependencies = [
  "beancount>=2,<3",
  "beautifulsoup4==4.*",
  "pydantic>=2"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
bean-extract-sjtu-ecard = "beancount_importer_sjtu_ecard:main"

# [tool.hatch.build.targets.wheel]
# include = [
#   "/*.py",
# ]

[tool.hatch.build.targets.sdist]
exclude = [
  "*.nix"
]

[tool.basedpyright]
typeCheckingMode = "basic"      # only enable basic type checking because of beancount
