[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beancount-importer-sjtu-ecard"
version = "0.0.1"
description = "Convert SJTU mealcard transactions to beancount file."
requires-python = ">=3.10"
keywords = ["sjtu", "beancount"]
authors = [
  { name = "Bojun Ren", email = "bj.ren.coding@outlook.com" },
]
readme = "README.md"
dependencies = [
  "beancount>=2,<3",
  "beautifulsoup4==4.*",
  "pydantic>=2"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov",
]

[project.scripts]
bean-extract-sjtu-ecard = "beancount_importer_sjtu_ecard:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "*.nix"
]

[tool.basedpyright]
typeCheckingMode = "basic"      # only enable basic type checking because of beancount
